--- a/src/styles/sass/1-base/_base.sass
+++ b/src/styles/sass/1-base/_base.sass
@@ -7,5 +7,16 @@ html, body
         text-decoration: none
         font-family: $font-stack-verdana
         overflow-x: hidden
+        cursor: none
+        height: calc('auto' + 200px)
 html
         scroll-behavior: smooth
+
+.window
+        height: 100vh
+        width: 100%
+        background: salmon
+        opacity: .4
+        position: fixed
+        z-index: 10000
+        overflow: hidden
