--- a/src/styles/sass/2-layout/_contacts.sass
+++ b/src/styles/sass/2-layout/_contacts.sass
@@ -1,5 +1,7 @@
 .contacts
     display: block
+    min-height: 100vh
+    background: white
 
     .contactsLeft
         height: 100vh
@@ -18,7 +20,6 @@
         max-height: 100vh
         .wrapper
             padding: 48px
-            height: 100vh
 
 
             p:first-of-type
