--- a/src/styles/sass/2-layout/_footer.sass
+++ b/src/styles/sass/2-layout/_footer.sass
@@ -1,4 +1,15 @@
 footer
-    height: 100vh
+    height: 200px
     background: $gray
+    overflow: hidden
+    z-index: -20
+    position: relative
+
+    #cheers
+        height: 100px
+        width: 200px
+        position: fixed
+        bottom: 100px
+        left: 50%
+        transform: translate(-50%,50%)
     
