--- a/src/styles/sass/2-layout/_hero.sass
+++ b/src/styles/sass/2-layout/_hero.sass
@@ -8,104 +8,21 @@
     background: #121212
     position: relative
 
-    .logo
-        display: flex
-        justify-content: space-around
-        padding: 0 40vw
-        align-items: center
+    nav
+        position: absolute
+        bottom: 40px
+        left: 50%
+        transform: translateX(-50%)
+        z-index: 1000
+        padding: 0
+        width: 30%
+        height: auto
         
 
-    .logo img
-        position: relative
-        height: 50px
-        margin: 1em auto
-        margin-bottom: 0
-    figure
-        margin-top: 3vh
-        margin-bottom: 5vh
-
-
-    img
-        position: absolute
-    #back-left
-        display: block
-        left: 0
-        bottom: 0
-        height: 80vh
-        filter: blur(4px)
-    #back-right
-        display: block
-        right: 0
-        bottom: 0
-        height: 73vh
-        filter: blur(3.5px)
-
-    #wel
-        display: block
-        top: 30%
-        left: 50%
-        transform: translateX(-50%)
-        height: 10vh
-        filter: blur(0px)
-    #come
-        display: block
-        top: 50%
-        left: 50%
-        transform: translateX(-50%)
-        height: 10vh
-        filter: blur(0px)
-    #middle-top
-        display: block
-        top: 20%
-        left: 50%
-        transform: translateX(-50%)
-        height: 8vh
-        filter: blur(2px)
-    #middle
-        display: block
-        top: 38%
-        left: 50%
-        transform: translateX(-50%)
-        height: 28vh
-        filter: blur(0px)
-    #middle-bottomleft
-        display: block
-        top: 52%
-        left: 40%
-        transform: translateX(-50%)
-        height: 25vh
-        filter: blur(2px)
-    #middle-topleft
-        display: block
-        top: 26%
-        left: 41%
-        transform: translateX(-50%)
-        height: 4vh
-        filter: blur(1px)
-    #middle-topright
-        display: block
-        top: 30%
-        left: 60%
-        transform: translateX(-50%)
-        height: 8vh
-        filter: blur(0px)
-    #middle-bottomright
-        display: block
-        top: 64%
-        left: 55%
-        transform: translateX(-50%)
-        height: 6vh
-        filter: blur(0px)
-    
- 
-    nav
-        margin: auto
-        z-index: 1000
-        margin-bottom: 40px
-        padding: 0
-        width: 80%
-        max-width: 350px
-
+        ul span
+            color: $yellow
+            padding: 0
+            margin: 0
         ul
             margin: auto
             padding: 0
@@ -113,13 +30,194 @@
             justify-content: space-between
             list-style: none
 
-            li, span
+            li
                 font-family: 'Nunito Sans', sans-serif
                 color: $yellow
-                padding: 0.3em
+                font-size: 14px
+                
 
                 a
                     text-decoration: none
                     color: $yellow
+                    padding: 10px
+
+                    &:hover span
+                        color: $pink
+
+
+                a span
+                    padding: 0
+                    margin: 0
+                    display: inline-block
+                    color: $yellow
+
+                    &:hover
+                        color: $yellow
+
+    .logo
+        position: absolute
+        left: 50%
+        transform: translateX(-50%)
         
+
+    .logo img
+        position: relative
+        height: 50px
+        margin: 1em auto
+        margin-bottom: 0
     
+
+    #scene
+        height: 100vh
+        width: 100%
+        position: absolute
+
+        .scene_container
+            height: 100vh
+            width: 100%
+            position: absolute
+            img
+                position: absolute
+                will-change: transform, opacity 
+
+            #back-left
+                display: block
+                left: -3% 
+                bottom: -3% 
+                height: 80vh
+                filter: blur(4px)
+            #back-right
+                background-repeat: no-repeat
+                right: -3% 
+                bottom: -3% 
+                height: 65vh
+                filter: blur(3.5px)
+
+            #wel
+                display: block
+                top: 30% 
+                left: 50% 
+                height: 10vh
+                filter: blur(0px)
+            #come
+                display: block
+                top: 50% 
+                left: 50% 
+                height: 10vh
+                filter: blur(0px)
+            #middle-top
+                display: block
+                top: 20% 
+                left: 50% 
+                transform: translateX(-50%)
+                height: 8vh
+                filter: blur(2px)
+            #middle
+                display: block
+                top: 38% 
+                left: 50% 
+                transform: translateX(-50%)
+                height: 28vh
+                filter: blur(0px)
+            #middle-bottomleft
+                display: block
+                top: 52% 
+                left: 42% 
+                transform: translateX(-50%)
+                height: 25vh
+                filter: blur(2px)
+            #middle-topleft
+                display: block
+                top: 26% 
+                left: 41% 
+                transform: translateX(-50%)
+                height: 4vh
+                filter: blur(1px)
+            #middle-topright
+                display: block
+                top: 30% 
+                left: 60% 
+                transform: translateX(-50%)
+                height: 8vh
+                filter: blur(1px)
+            #middle-bottomright
+                display: block
+                top: 64% 
+                left: 55% 
+                transform: translateX(-50%)
+                height: 6vh
+                filter: blur(0px)
+    
+ 
+    @media screen and (max-width: 480px)
+        nav
+            width: 80% !important
+            ul
+                li
+                    font-size: 14px !important 
+                    padding: 0 !important
+            
+        #back-left
+            display: none !important
+        #back-right
+            display: none !important
+        #wel
+            height: 50px !important
+        #come
+            height: 50px !important
+            top: 40% !important
+        #middle
+            height: 100px !important
+            top: 34% !important
+        #middle-bottomleft
+            height: 100px !important
+            top: 45% !important
+            left: 25% !important
+        #middle-bottomright
+            height: 50px !important
+            top: 53% !important
+            left: 59.5% !important
+        #middle-topright
+            top: 25% !important
+            left: 71% !important
+        #middle-topleft
+            height: 25px !important
+            top: 26% !important
+            left: 27% !important
+
+
+    @media only screen and (max-width: 1000px)
+        nav
+            width: 65% 
+            max-width: 400px
+            ul
+                li
+                    font-size: 14px 
+            
+        #back-left
+            height: 350px !important
+        #back-right
+            height: 350px !important
+        #wel
+            height: 70px !important
+        #come
+            height: 70px !important
+            top: 45% !important
+        #middle
+            height: 150px !important
+            top: 35% !important
+        #middle-bottomleft
+            height: 130px !important
+            top: 55% !important
+            left: 32% !important
+        #middle-bottomright
+            height: 50px !important
+            top: 66% !important
+            left: 62% !important
+        #middle-topright
+            top: 25% !important
+            left: 65% !important
+        #middle-topleft
+            height: 25px !important
+            top: 26% !important
+            left: 36% !important
