about info added

--- a/src/styles/css/cursor.css
+++ b/src/styles/css/cursor.css
@@ -24,4 +24,10 @@
 .main, a {
   cursor: none;
 }
+
+@media only screen and (max-width: 480px) {
+  .cursor {
+    display: none;
+  }
+}
 /*# sourceMappingURL=cursor.css.map */
