--- a/src/styles/sass/cursor.sass
+++ b/src/styles/sass/cursor.sass
@@ -20,15 +20,10 @@
     width: 100vw
     z-index: 12000
 
-
-
-        
-        
-        
-            
-            
-
-
-    
 .main, a
     cursor: none
+
+
+@media only screen and (max-width: 480px)
+    .cursor
+        display: none
