--- a/src/styles/css/app.css
+++ b/src/styles/css/app.css
@@ -1,7 +1,7 @@
 /* VARIABLES */
 /* MIXINS */
 /* THE REST */
-@import url("https://fonts.googleapis.com/css?family=Nunito:700|Nunito+Sans:700");
+@import url("https://fonts.googleapis.com/css?family=Nunito:700|Nunito+Sans:400,700,800");
 @import url("https://fonts.googleapis.com/css?family=Fascinate+Inline");
 html, body {
   padding: 0;
@@ -52,7 +52,7 @@ html {
           transform: translateX(-50%);
   z-index: 1000;
   padding: 0;
-  width: 30%;
+  width: 100%;
   height: auto;
 }
 
@@ -60,6 +60,7 @@ html {
   color: #FFECCF;
   padding: 0;
   margin: 0;
+  white-space: nowrap;
 }
 
 .hero nav ul {
@@ -68,10 +69,14 @@ html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   list-style: none;
+  white-space: nowrap;
 }
 
 .hero nav ul li {
@@ -235,9 +240,6 @@ html {
 }
 
 @media screen and (max-width: 480px) {
-  .hero nav {
-    width: 80% !important;
-  }
   .hero nav ul li {
     font-size: 14px !important;
     padding: 0 !important;
@@ -281,10 +283,6 @@ html {
 }
 
 @media only screen and (max-width: 1000px) {
-  .hero nav {
-    width: 65%;
-    max-width: 400px;
-  }
   .hero nav ul li {
     font-size: 14px;
   }
@@ -331,7 +329,7 @@ html {
 }
 
 .about .left {
-  background: #292929;
+  background: #FFECCF;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -350,33 +348,69 @@ html {
   text-align: center;
   font-family: 'Fascinate Inline', cursive;
   font-size: 40px;
-  color: white;
+  color: #121212;
 }
 
 .about .right {
   height: 100%;
-  padding: 24px;
   background: white;
 }
 
-.about .right p {
-  font-size: 16px;
-  line-height: 28px;
-  text-align: start;
-  margin: auto;
-  font-family: 'Nunito',sans-serif;
-}
-
-.about .right h1 {
-  font-size: 18px;
+.about .right .right-content {
+  padding-top: 50px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 50px;
   font-family: 'Nunito Sans', sans-serif;
-  font-weight: 700;
+  font-weight: 300;
+  font-size: 1em;
+  line-height: 28px;
 }
 
-.about .right section {
-  padding: 12px;
-  max-width: 700px;
-  margin: auto;
+.about .right .right-content .tools li {
+  color: #35ABBC;
+}
+
+.about .right .right-content .tools li span {
+  color: #121212;
+}
+
+.about .right .right-content .process {
+  list-style: none;
+  margin-top: 50px;
+}
+
+.about .right .right-content .process span {
+  color: #35ABBC;
+  margin-right: 8px;
+}
+
+.about .right .right-content .process h6 {
+  margin: 20px 10px;
+  text-transform: uppercase;
+  font-weight: 800;
+}
+
+.about .right .right-content p {
+  margin-top: 40px;
+}
+
+.about .right .right-content h5 {
+  font-size: 22px;
+}
+
+.about .right .right-content h6 {
+  font-size: 1.2em;
+  margin-bottom: 0;
+  margin-left: 15px;
+}
+
+.about .right .right-content ul {
+  margin-top: 0px;
+}
+
+.about .right .right-content .about-bold {
+  font-weight: 800;
 }
 
 @media screen and (min-width: 960px) {
