--- a/src/styles/sass/2-layout/_hero.sass
+++ b/src/styles/sass/2-layout/_hero.sass
@@ -15,7 +15,7 @@
         transform: translateX(-50%)
         z-index: 1000
         padding: 0
-        width: 30%
+        width: 100%
         height: auto
         
 
@@ -23,13 +23,15 @@
             color: $yellow
             padding: 0
             margin: 0
+            white-space: nowrap
         ul
             margin: auto
             padding: 0
             display: flex
-            justify-content: space-between
+            justify-content: center
+            align-items: center
             list-style: none
-
+            white-space: nowrap
             li
                 font-family: 'Nunito Sans', sans-serif
                 color: $yellow
@@ -151,7 +153,6 @@
  
     @media screen and (max-width: 480px)
         nav
-            width: 80% !important
             ul
                 li
                     font-size: 14px !important 
@@ -188,8 +189,6 @@
 
     @media only screen and (max-width: 1000px)
         nav
-            width: 65% 
-            max-width: 400px
             ul
                 li
                     font-size: 14px 
