--- a/src/styles/sass/2-layout/_footer.sass
+++ b/src/styles/sass/2-layout/_footer.sass
@@ -1,6 +1,6 @@
 footer
     height: 200px
-    background: $gray
+    background: #121212
     overflow: hidden
     z-index: -20
     position: relative
