--- a/src/styles/sass/2-layout/_hero.sass
+++ b/src/styles/sass/2-layout/_hero.sass
@@ -8,6 +8,14 @@
     background: #121212
     position: relative
 
+    .fixed
+        position: fixed
+        bottom: -100%
+        background: $pink   
+        padding: 10px
+        z-index: 10000
+        opacity: .6
+
     nav
         position: absolute
         bottom: 40px
