--- a/src/styles/sass/2-layout/_contacts.sass
+++ b/src/styles/sass/2-layout/_contacts.sass
@@ -29,7 +29,8 @@
             p
                 line-height: 28px
                 font-size: 16px
-                font-family: 'Nunito', sans-serif
+                font-family: 'Nunito Sans', sans-serif
+                font-weight: 400
                 margin-bottom: 25px
                 letter-spacing: normal
             
