--- a/src/styles/sass/2-layout/_hero.sass
+++ b/src/styles/sass/2-layout/_hero.sass
@@ -16,6 +16,9 @@
         z-index: 10000
         opacity: .6
 
+        &:hover
+            opacity: 1
+
     nav
         position: absolute
         bottom: 40px
@@ -108,13 +111,23 @@
                 top: 30% 
                 left: 50% 
                 height: 10vh
-                filter: blur(0px)
+            #im
+                display: block
+                top: 30% 
+                left: 50% 
+                height: 10vh
+                opacity: 0
             #come
                 display: block
                 top: 50% 
                 left: 50% 
                 height: 10vh
-                filter: blur(0px)
+            #sam
+                display: block
+                top: 50% 
+                left: 50% 
+                height: 10vh
+                opacity: 0
             #middle-top
                 display: block
                 top: 20% 
